@@ -1548,7 +1548,7 @@ class gdrive(cloudservice):
     #   parameters: package (optional), title of media file, isExact allowing for fuzzy searches
     #   returns: url for playback
     ##
-    def getPlaybackCall(self, package=None, title='', isExact=True, contentType=None, override=False):
+    def getPlaybackCall(self, package=None, title='', isExact=True, contentType=None, override=False, MD5List=None, fileIDList=None):
 
         mediaURLs = []
 
@@ -1595,6 +1595,33 @@ class gdrive(cloudservice):
                 except urllib2.URLError, e:
                     xbmc.log("download quota check- error " + str(e), xbmc.LOGDEBUG)
                     if e.code == 403:
+                        if fileIDList is not None:
+                            retry = True
+                            for item in MD5List[fileIDList[docid]]:
+                                if retry and item != docid:
+                                    url = self.API_URL +'files/' + str(docid) + '?includeTeamDriveItems=true&supportsTeamDrives=true&alt=media'
+                                    req = urllib2.Request(url, None, self.getHeadersList())
+                                    xbmc.log('getPlaybackCall try another file ' + str(item))
+                                    xbmc.log("URL = " + str(url), xbmc.LOGDEBUG)
+                                    try:
+                                        response = urllib2.urlopen(req)
+                                        retry = False
+                                    except urllib2.URLError, e:
+                                        xbmc.log('getPlaybackCall still error reached '+str(e))
+                            while retry and self.refreshServiceToken(fetchNext=True):
+                                for item in MD5List[fileIDList[docid]]:
+                                    if retry:
+                                        url = self.API_URL +'files/' + str(docid) + '?includeTeamDriveItems=true&supportsTeamDrives=true&alt=media'
+                                        req = urllib2.Request(url, None, self.getHeadersList())
+                                        xbmc.log('getPlaybackCall try another file ' + str(item))
+                                        xbmc.log("URL = " + str(url), xbmc.LOGDEBUG)
+                                        try:
+                                            response = urllib2.urlopen(req)
+                                            retry = False
+                                        except urllib2.URLError, e:
+                                            xbmc.log('getPlaybackCall still error reached '+str(e))
+
+                        else:
 
                           retry = True
                           while retry and self.refreshServiceToken(fetchNext=True):
@@ -1604,6 +1631,7 @@ class gdrive(cloudservice):
                                 retry = False
                             except urllib2.URLError, e:
                                 xbmc.log('getPlaybackCall still error reached '+str(e))
+
 
 
             xbmc.log('getPlaybackCall - forcing to original')
@@ -1959,7 +1987,32 @@ class gdrive(cloudservice):
                 except urllib2.URLError, e:
                     xbmc.log("download quota check- error " + str(e), xbmc.LOGDEBUG)
                     if e.code == 403:
-
+                        if fileIDList is not None:
+                            retry = True
+                            for item in MD5List[fileIDList[docid]]:
+                                if retry and item != docid:
+                                    url = self.API_URL +'files/' + str(docid) + '?includeTeamDriveItems=true&supportsTeamDrives=true&alt=media'
+                                    req = urllib2.Request(url, None, self.getHeadersList())
+                                    xbmc.log('getPlaybackCall try another file ' + str(item))
+                                    xbmc.log("URL = " + str(url), xbmc.LOGDEBUG)
+                                    try:
+                                        response = urllib2.urlopen(req)
+                                        retry = False
+                                    except urllib2.URLError, e:
+                                        xbmc.log('getPlaybackCall still error reached '+str(e))
+                            while retry and self.refreshServiceToken(fetchNext=True):
+                                for item in MD5List[fileIDList[docid]]:
+                                    if retry:
+                                        url = self.API_URL +'files/' + str(docid) + '?includeTeamDriveItems=true&supportsTeamDrives=true&alt=media'
+                                        req = urllib2.Request(url, None, self.getHeadersList())
+                                        xbmc.log('getPlaybackCall try another file ' + str(item))
+                                        xbmc.log("URL = " + str(url), xbmc.LOGDEBUG)
+                                        try:
+                                            response = urllib2.urlopen(req)
+                                            retry = False
+                                        except urllib2.URLError, e:
+                                            xbmc.log('getPlaybackCall still error reached '+str(e))
+                        else:
                           retry = True
                           while retry and self.refreshServiceToken(fetchNext=True):
                             req = urllib2.Request(url, None, self.getHeadersList())
@@ -1992,7 +2045,32 @@ class gdrive(cloudservice):
             except urllib2.URLError, e:
                 xbmc.log("download quota check- error " + str(e), xbmc.LOGDEBUG)
                 if e.code == 403:
-
+                    if fileIDList is not None:
+                        retry = True
+                        for item in MD5List[fileIDList[docid]]:
+                            if retry and item != docid:
+                                url = self.API_URL +'files/' + str(docid) + '?includeTeamDriveItems=true&supportsTeamDrives=true&alt=media'
+                                req = urllib2.Request(url, None, self.getHeadersList())
+                                xbmc.log('getPlaybackCall try another file ' + str(item))
+                                xbmc.log("URL = " + str(url), xbmc.LOGDEBUG)
+                                try:
+                                    response = urllib2.urlopen(req)
+                                    retry = False
+                                except urllib2.URLError, e:
+                                    xbmc.log('getPlaybackCall still error reached '+str(e))
+                        while retry and self.refreshServiceToken(fetchNext=True):
+                            for item in MD5List[fileIDList[docid]]:
+                                if retry:
+                                    url = self.API_URL +'files/' + str(docid) + '?includeTeamDriveItems=true&supportsTeamDrives=true&alt=media'
+                                    req = urllib2.Request(url, None, self.getHeadersList())
+                                    xbmc.log('getPlaybackCall try another file ' + str(item))
+                                    xbmc.log("URL = " + str(url), xbmc.LOGDEBUG)
+                                    try:
+                                        response = urllib2.urlopen(req)
+                                        retry = False
+                                    except urllib2.URLError, e:
+                                        xbmc.log('getPlaybackCall still error reached '+str(e))
+                    else:
                       retry = True
                       while retry and self.refreshServiceToken(fetchNext=True):
                         req = urllib2.Request(url, None, self.getHeadersList())
